--- a/src/app/shared/invoice/invoice.component.html
+++ b/src/app/shared/invoice/invoice.component.html
@@ -6,7 +6,7 @@
         <span class="invoice-data"> Invoice </span>
       </td>
       <td class="col">
-        <span class="invoice-info">Invoice ID<br />0x123</span>
+        <span class="invoice-info">Invoice ID<br />{{ bill?.id }}</span>
       </td>
       <td class="col">
         <span class="invoice-info">Issue Date<br />12/10/2023</span>
@@ -15,11 +15,11 @@
     <tr class="row">
       <td class="col">
         <span class="title">Name</span>
-        <span class="name">Mohab Ahmed</span>
+        <span class="name">{{ name }}</span>
       </td>
       <td class="col">
         <span class="second-title">Phone No</span>
-        <span class="phone">+201126889227</span>
+        <span class="phone">{{ phoneNumber }}</span>
       </td>
       <td class="col">
         <span class="second-title">Address</span>
