--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -27,5 +27,11 @@
         Telephone Bills</a
       >
     </div>
+    <div class="items">
+      <a routerLink="/Bills-History">
+        <img src="../../../assets/Call.svg" alt="" class="icons" />
+        History
+      </a>
+    </div>
   </div>
 </div>
