--- a/src/app/electricity-invoice/electricity-invoice.component.html
+++ b/src/app/electricity-invoice/electricity-invoice.component.html
@@ -4,10 +4,10 @@
   </div>
 
   <main class="electricity-bills">
-    <h1>Electricity Bills</h1>
+    <h1>{{ billType }}</h1>
     <hr />
     <div class="invoice">
-      <h1>Electricity Invoice</h1>
+      <h1>{{ billType }} Invoice</h1>
     </div>
     <app-invoice> </app-invoice>
   </main>
