--- a/src/app/shared/payment/payment.component.html
+++ b/src/app/shared/payment/payment.component.html
@@ -107,7 +107,16 @@
         </div>
       </div>
 
-      <button type="submit" class="checkout-btn">Checkout</button>
+      <button
+        type="submit"
+        class="checkout-btn"
+        (click)="paymentForm.valid && (showPopup = true)"
+        [disabled]="!paymentForm.valid"
+      >
+        Checkout
+      </button>
+
+      <app-pop-up [showPopup]="showPopup"></app-pop-up>
     </form>
   </div>
 </div>
