--- a/src/app/Admin/users-table/users-table.component.html
+++ b/src/app/Admin/users-table/users-table.component.html
@@ -11,23 +11,24 @@
         <th>Due Date</th>
         <th>Status</th>
         <th>Type</th>
-
-
+        <th>Action</th>
       </tr>
     </thead>
-
-
+    <tbody>
       <tr *ngFor="let bill of bills">
-        <td>{{bill.id}} </td>
+        <td>{{bill.id}}</td>
         <td>{{bill.date}}</td>
         <td>{{bill.amount}}</td>
         <td>{{bill.dueDate}}</td>
         <td>{{bill.status}}</td>
         <td>{{bill.type}}</td>
+        <td> 
+          <button (click)="payBill(bill)" class="blue-button">Pay Bill</button>
+        </td>
       </tr>
-
+    </tbody>
   </table>
-  <div >
+  <div>
     <button (click)="navigate()" class="blue-button">Add Bill</button>
   </div>
 </div>
