--- a/src/app/dash-board/dash-board.component.html
+++ b/src/app/dash-board/dash-board.component.html
@@ -1,11 +1,15 @@
 <div class="container">
   <div class="navBar">
     <app-nav-bar></app-nav-bar>
+
   </div>
+   
 
   <main class="dashBoard">
+    
     <h1>Dashboard</h1>
     <hr />
+    <button class="blue-button moveButton" (click)="logout()">Logout</button>
 
     <div class="pending">
       <h1>Pending Bills</h1>
