place holder fix

--- a/src/app/shared/payment/payment.component.html
+++ b/src/app/shared/payment/payment.component.html
@@ -33,7 +33,7 @@
         <label for="card-name">Card Name</label>
         <input
           id="card-name"
-          placeholder="Mohab Ahmed"
+          placeholder="Card Name "
           type="text"
           formControlName="cardName"
           [ngClass]="{
