--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -5,7 +5,7 @@
   <div class="routes">
     <div class="items">
       <a routerLink="/Dash-Board">
-        <img src="../../../assets/Dash.svg" alt="" class="icons" />
+        <img src="../../../assets/Dashh.png" alt="" class="icons" />
         Dashboard
       </a>
     </div>
