electricity fix , admin add bill fix

--- a/src/app/Admin/add-bill/add-bill.component.html
+++ b/src/app/Admin/add-bill/add-bill.component.html
@@ -19,9 +19,9 @@
             }"
           >
             <option value="" selected>-- Select a bill type --</option>
-            <option value="Electricity">Electricity</option>
+            <option value="electricity">Electricity</option>
             <option value="Telephone">Telephone</option>
-            <option value="Water">Water</option>
+            <option value="water">Water</option>
           </select>
           <div
             *ngIf="
