--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -17,7 +17,7 @@
     </div>
     <div class="items">
       <a routerLink="/Dash-Board/Water">
-        <img src="../../../assets/Water.svg" alt="" class="icons" />
+        <img src="../../../assets/water_dashboard.svg" alt="" class="icons" />
         Water Bills</a
       >
     </div>
