--- a/src/app/shared/payment/payment.component.html
+++ b/src/app/shared/payment/payment.component.html
@@ -33,7 +33,7 @@
         <label for="card-name">Card Name</label>
         <input
           id="card-name"
-          placeholder="Card Name "
+          placeholder="Bank Name "
           type="text"
           formControlName="cardName"
           [ngClass]="{
@@ -52,7 +52,7 @@
         "
         class="errorMessage"
       >
-        Please type a vaild Card Name
+        Please type a vaild Bank  Name
       </div>
       <div class="two-halfs">
         <div>
