ehna shaaleeen haaa

--- a/src/app/dash-board/dash-board.component.html
+++ b/src/app/dash-board/dash-board.component.html
@@ -24,7 +24,7 @@
     <div class="pending">
       <h1>Latest Invoices</h1>
     </div>
-   
+    <app-password-reset></app-password-reset>
 
     <div class="invoicesTable">
       <app-table [bills]="bills" [searchedBills]="bills"></app-table>
