bosy 3la e commmentss fl  loginnnnnnnn

--- a/src/app/password-reset/password-reset.component.html
+++ b/src/app/password-reset/password-reset.component.html
@@ -2,7 +2,7 @@
   class="searchBar"
   [(ngModel)]="password"
   type="text"
-  placeholder="search by type"
+  placeholder="resetPassword"
 />
-<button class="blue-button" (click)="resetPassword()" >Search</button>
+<button class="blue-button" (click)="resetPassword()" >Reset</button>
 
